--- a/package.json
+++ b/package.json
@@ -20,17 +20,21 @@
     "@angular/forms": "~9.1.9",
     "@angular/google-maps": "^9.2.4",
     "@angular/localize": "~9.1.9",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
     "@nebular/eva-icons": "^5.1.0",
     "@nebular/theme": "^5.1.0",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "@types/googlemaps": "^3.39.2",
     "bootstrap": "^4.5.0",
     "cookieconsent": "^3.1.1",
     "eva-icons": "^1.1.2",
     "firebase": "^7.13.1",
+    "ngx-audio-player": "^8.1.1",
     "ngx-cookieconsent": "^2.2.3",
     "ngx-infinite-scroll": "^9.0.0",
     "ngx-responsive": "^9.0.3",
