--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "@types/googlemaps": "^3.39.2",
+    "angular-common": "^0.1.0",
     "bootstrap": "^4.5.0",
     "cookieconsent": "^3.1.1",
     "eva-icons": "^1.1.2",
